refactor RSA key + better config file

--- a/data/config-sample.json
+++ b/data/config-sample.json
@@ -1,5 +1,6 @@
 {
-  "master": null,
+  "master_host": null,
+  "master_key": null,
   "chain": "data/chain.json",
   "web_key": null,
   "peers": []
